--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <li>Lorem ipsum.</li>
         </ul>
         <div id="stubborn-btn">
-          <input id="btn-select" value="SELECT" />
+          <button id="btn-select">SELECT</button>
         </div>
       </div>
       <div class="box-second-pricing">
@@ -119,7 +119,7 @@
           <li>Lorem ipsum.</li>
         </ul>
         <div id="stubborn-btn">
-          <input id="btn-select" value="SELECT" />
+          <button id="btn-select">SELECT</button>
         </div>
       </div>
       <div class="box-pricing">
@@ -132,7 +132,7 @@
           <li>Lorem ipsum.</li>
         </ul>
         <div id="stubborn-btn">
-          <input id="btn-select" value="SELECT" />
+          <button id="btn-select">SELECT</button>
         </div>
       </div>
     </div>
